Adicionado o michigan yv-er dataset

--- a/notebook/datasets/personal.ipynb
+++ b/notebook/datasets/personal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -142,6 +142,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "heading_collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -154,6 +155,7 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
+    "hidden": true,
     "slideshow": {
      "slide_type": "skip"
     }
@@ -167,6 +169,7 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
+    "hidden": true,
     "slideshow": {
      "slide_type": "skip"
     }
@@ -180,6 +183,7 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
+    "hidden": true,
     "slideshow": {
      "slide_type": "skip"
     }
@@ -192,6 +196,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "hidden": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -204,6 +209,7 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
+    "hidden": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -716,7 +722,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -728,7 +733,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "hidden": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -792,7 +796,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "hidden": true,
     "slideshow": {
      "slide_type": "skip"
     }
@@ -803,23 +806,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 222,
    "metadata": {
-    "hidden": true,
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "b'Skipping line 1638: expected 3 fields, saw 5\\nSkipping line 1755: expected 3 fields, saw 5\\n'\n"
+     ]
+    }
+   ],
    "source": [
     "ds_files = 'D:\\Dados\\OneDrive\\Doutorado\\Datasets\\\\\\judeus\\\\\\yv-er\\\\'\n",
     "\n",
     "dsa = 'italy_records.csv'\n",
     "gab = 'italy_pairs.csv'\n",
-    "zip_file = 'processed_census.zip'\n",
+    "zip_file = 'processed_yver.zip'\n",
     "\n",
-    "df = pd.read_csv(ds_files+dsa,encoding=\"iso-8859-1\",sep=\";\",\n",
-    "                 header=None,error_bad_lines=False)\n",
+    "# df = pd.read_csv(ds_files+dsa,encoding=\"iso-8859-1\",sep=\";\",\n",
+    "#                  header=None,error_bad_lines=False)\n",
     "dfg = pd.read_csv(ds_files+gab,header=None\n",
     "                  ,encoding=\"iso-8859-1\",sep=\",\",\n",
     "                 error_bad_lines=False)"
@@ -827,35 +837,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true,
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
+   "metadata": {},
    "source": [
-    "## Tratando os dados"
+    "## Processar os dados corretos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 223,
    "metadata": {
-    "hidden": true,
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "df = substituir_valores_nulos(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true,
     "slideshow": {
      "slide_type": "skip"
     }
@@ -870,24 +860,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true,
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
+   "execution_count": 224,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "file1 = open(ds_files+dsa, 'r') \n",
+    "lines = file1.readlines() \n",
+    "\n",
+    "separador = ';'\n",
     "dados = []\n",
-    "for index, row in df.iterrows():\n",
-    "    id_ = row[0]\n",
+    "\n",
+    "for line in lines: \n",
+    "    cols = line.split(separador)\n",
+    "    \n",
+    "    id_ = cols[0]\n",
     "    bd = np.nan\n",
     "    bm = np.nan\n",
     "    by = np.nan\n",
+    "    prof = ''\n",
     "    \n",
-    "    for attr in row[1:]:\n",
-    "    \n",
+    "    for attr in cols[1:]:\n",
     "        if attr == '':\n",
     "            pass # valor nulo\n",
     "\n",
@@ -901,7 +893,7 @@
     "        token='S_'\n",
     "        if (processar_token(token,attr) != None):\n",
     "            source = processar_token(token,attr)\n",
-    "        \n",
+    "\n",
     "        token='L_'\n",
     "        if (processar_token(token,attr) != None):\n",
     "            lastname = processar_token(token,attr)\n",
@@ -942,8 +934,8 @@
     "        if (processar_token(token,attr) != None):\n",
     "            prof = processar_token(token,attr)\n",
     "\n",
-    "    # fullbirth = bd + bm + by \n",
-    "#     print(firstname,lastname,sexo , by , city , county , region , country , prof)\n",
+    "        # fullbirth = bd + bm + by \n",
+    "    #     print(firstname,lastname,sexo , by , city , county , region , country , prof)\n",
     "\n",
     "    linha = [ id_, source, firstname, lastname, sexo, bd , bm, by , city , county , region , country , prof]\n",
     "    dados.append(linha)"
@@ -951,13 +943,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true,
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
+   "execution_count": 225,
+   "metadata": {},
    "outputs": [],
    "source": [
     "nomes = ['id', 'src','firstname','lastname', 'gender', 'bd' , 'bm', 'by' , 'city' , 'county' , 'region' , 'country' , 'prof']\n",
@@ -965,13 +952,37 @@
     "nan_list = df.isnull().sum()\n",
     "estatiscas = df.describe(include='object')\n",
     "stats = gerar_estatiscas_df(nan_list,estatiscas)\n",
-    "df = substituir_valores_nulos(df)"
+    "df = substituir_valores_nulos(df)\n",
+    "df = df.astype(str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(9499, 9499)"
+      ]
+     },
+     "execution_count": 226,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(lines),len(df)\n",
+    "# for row in line.split(separador):\n",
+    "#     print(row)\n",
+    "#     pass\n",
+    "# row"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "hidden": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -982,36 +993,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 204,
    "metadata": {
-    "hidden": true,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
    "outputs": [],
    "source": [
-    "df"
+    "# df[df.id == 1013048]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 143,
    "metadata": {
-    "hidden": true,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
    "outputs": [],
    "source": [
-    "stats"
+    "# stats"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "hidden": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -1024,111 +1032,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 227,
    "metadata": {
-    "hidden": true,
     "slideshow": {
      "slide_type": "skip"
     }
    },
    "outputs": [],
    "source": [
-    "da,db = verify_gg4cc(dfg[dfg.c == 1])\n",
-    "display(da)\n",
-    "display(db)"
+    "dfg.columns = ['id1','id2','gs']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 228,
    "metadata": {
-    "hidden": true,
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "df.src.unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true,
     "slideshow": {
      "slide_type": "skip"
     }
    },
    "outputs": [],
    "source": [
-    "dfg.columns = ['id1','id2','c']"
+    "# df = dfg[dfg.c.isin([1,2])]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
+   "execution_count": 229,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "display(dfg[dfg.id1 == 3631644])\n",
-    "display(dfg[dfg.id1 == 1004474])\n",
-    "display(dfg[dfg.id1 == 1397428])"
+    "# a = df[df.id.isin(dfg.id1.unique())]\n",
+    "# b = df[df.id.isin(dfg.id2.unique())]\n",
+    "\n",
+    "a = df\n",
+    "b = df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true,
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
+   "execution_count": 230,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "a = list(dfg[dfg.c == 1].id1.unique())\n",
-    "b = list(dfg[dfg.c == 1].id2.unique())"
+    "dfg['is_match'] = 1\n",
+    "dfg = dfg[dfg.gs != 3] # removing the maybe\n",
+    "dfg.loc[dfg['gs'] == 2, 'is_match'] = 1\n",
+    "dfg.loc[dfg['gs'] > 3 , 'is_match'] = 0\n",
+    "\n",
+    "del dfg['gs']"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true,
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "c=list(set(a+b))\n",
-    "len(c)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true,
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true,
     "slideshow": {
      "slide_type": "skip"
     }
@@ -1139,30 +1096,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true,
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
+   "execution_count": 231,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "df ,stats"
+    "save_zip(a,b,dfg,stats,ds_files + zip_file)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
-  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
